# KDDCupDataAgent

./: .env.example  .gitignore  CLAUDE.local.md.example  CLAUDE.md  README.md  submission_log.md
data/claude_trajectory/: REPORT.md
data/claude_trajectory/task_11/: reason.md
data/claude_trajectory/task_145/: reason.md
data/claude_trajectory/task_163/: reason.md
data/claude_trajectory/task_169/: reason.md
data/claude_trajectory/task_173/: reason.md
data/claude_trajectory/task_180/: reason.md
data/claude_trajectory/task_19/: reason.md
data/claude_trajectory/task_194/: reason.md
data/claude_trajectory/task_196/: reason.md
data/claude_trajectory/task_199/: reason.md
data/claude_trajectory/task_200/: reason.md
data/claude_trajectory/task_214/: reason.md
data_agent_baseline_v1/: .dockerignore  Dockerfile  README.md  build_and_test_docker.sh  entrypoint.py  pyproject.toml  run_baseline_v1.sh  submit_pipeline.sh  verify_archive.sh  verify_submission.sh
data_agent_baseline_v1/configs/: baseline_v1.example.yaml
data_agent_baseline_v1/src/data_agent_baseline_v1/: __init__.py  cli.py  config.py  model_client.py  orchestrator.py  submit_runner.py
data_agent_baseline_v1/src/data_agent_baseline_v1/run/: runner.py
data_agent_v0/: .dockerignore  .gitignore  DOCKER_PACKAGING.md  Dockerfile  EVAL_PLAN_30D.md  README.md  entrypoint.py  pyproject.toml  run_v0.sh
data_agent_v0/configs/: v0.example.yaml
data_agent_v0/src/data_agent_v0/: __init__.py  cli.py  config.py  executor.py  model_client.py  orchestrator.py  planner.py  preload.py  prompts.py  repl.py  submit_runner.py
data_agent_v0/src/data_agent_v0/output/: normalize.py  shape.py
data_agent_v0/src/data_agent_v0/run/: runner.py
docs/: PHASE_PLAN.md  VERSION_HISTORY.md  分难度方案设计.md  改进路线图.md  方案调研综述.md  比赛简介.md
experiments/: _template.yaml
kddcup2026-starter-kit/: .gitignore  run_baseline.sh  run_retry.sh
reports/: baseline_3seed_eval_report.json  baseline_3seed_remote_eval_report.json  baseline_3seed_remote_vs_baseline_v1_3seed_remote.md  baseline_3seed_remote_vs_v0_3seed_remote.md  baseline_3seed_vs_v0_3seed_diff.md  baseline_architecture.html  baseline_eval_report.json  baseline_scored.json  baseline_v1_3seed_remote_eval_report.json  baseline_v1_3seed_remote_vs_v0_3seed_remote.md  baseline_v2_eval_report.json  baseline_v2_vs_v0_v3_full_diff.md  baseline_vs_v0_v2_diff.md  demo_profile.md  demo_qwen35_baseline_scored.json  demo_qwen35_baseline_v1_s43_scored.json  demo_qwen35_baseline_v2_s42_scored.json  demo_qwen35_baseline_v2_s43_scored.json  demo_qwen35_baseline_v2_scored.json  demo_qwen35_retry30_scored.json  demo_qwen35_v0_scored.json  demo_qwen35_v0_v2_scored.json  demo_qwen35_v0_v3_full_s42_scored.json  demo_qwen35_v0_v3_full_s43_scored.json  demo_qwen35_v0_v3_full_scored.json  demo_qwen35_v0_v4_F1F2_s43_scored.json  demo_qwen35_v0_v5_F1F2tuned_s42_scored.json  demo_qwen35_v0_v5_F1F2tuned_s43_scored.json  demo_qwen35_v0_v5_F1F2tuned_scored.json  docker_verify_20260427_153959_eval_report.json  smoke_v0_scored.json  v0_2seed_clean_eval_report.json  v0_3seed_eval_report.json  v0_3seed_remote_eval_report.json  v0_3seed_remote_vs_v0_v5_F1F2tuned_3seed.md  v0_v2_eval_report.json  v0_v3_eval_report.json  v0_v3_full_eval_report.json  v0_v5_F1F2tuned_3seed_eval_report.json
scripts/: convert_bird.py  profile_demo.py  run_3seed_eval.sh
src/eval/: enhanced_eval.py  eval_diff.py  normalize.py  scorer.py
tools/agent_diagnose/: .gitignore  README.md  pyproject.toml  run_diagnose.sh  serve_remote.sh
tools/agent_diagnose/src/agent_diagnose/: __init__.py  app.py  config.py  data.py  diff.py  markdown_helper.py  normalize.py  scoring.py  stats.py
tools/agent_diagnose/src/agent_diagnose/static/: style.css
tools/agent_diagnose/src/agent_diagnose/templates/: base.html  eval.html  overview.html  task_replay.html
tools/agent_diagnose/src/agent_diagnose/templates/partials/: __init.html  agent_summary_card.html  kpi_row.html  planner_card.html  prediction_diff.html  run_table.html  score_matrix.html  step_card.html
tools/agent_diagnose/tests/: test_data_layer.py  test_normalize_step.py
(+41 files in other folders)
