[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "data-agent-v0"
version = "0.1.0"
description = "v0 data agent: CodeAct + schema preload + Plan-Executor with replan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "data-agent-baseline",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "openai>=2.28.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.2",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[project.scripts]
agentv0 = "data_agent_v0.cli:main"

[tool.uv.sources]
data-agent-baseline = { path = "../kddcup2026-starter-kit", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/data_agent_v0"]
