[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-diagnose"
version = "0.1.0"
description = "Local FastAPI + HTMX dashboard to compare KDD Cup data agent runs and replay traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "pygments>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "httpx>=0.28.0",
]

[project.scripts]
agent-diagnose = "agent_diagnose.app:main"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_diagnose"]
